@@ -10,7 +10,7 @@ pyramid.includes =
     pyramid_tm
 
 #sqlalchemy.url = sqlite:///%(here)s/stalker_pyramid.db
-sqlalchemy.url = postgresql+psycopg2://stalker_admin:stalker@192.168.1.10:5432/stalker
+sqlalchemy.url = postgresql+psycopg2://stalker_admin:stalker@192.168.0.64:5432/stalker
 
 jinja2.directories = stalker_pyramid:templates
 
